--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 </head>
 <body>
+	chat now 1.0
     <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
